# spectra

./: .env.example  .gitignore  0.25.0  2.0.0  2.5.0  23.0.0  4.35.0  API_ISSUE_RESOLUTION.md  DEVELOPER_TOOLING.md  DEVELOPER_TOOLING_2025.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS.md  MCP_AUDIT_COMPLETE.md  README.md  REFACTOR_PLAN_2025.md  demo_mode.py  demo_mode_new.py  launch.py  launcher.py  main.py  main_new.py  main_old.py  package-lock.json  package.json  requirements.txt  setup-git-repo.ps1  setup-git-repo.sh  setup.bat  setup_local_ai.py  simple_demo.py  spectra_advanced_gui.py  spectra_cleanup.py  spectra_gui.py  test_ai_system.py  test_openhermes.py  test_runner.py  turbo.json  upload.sh
.github/workflows/: ci.yml
SpectraAI-Monorepo/: README.md  package-lock.json  package.json
SpectraAI-Monorepo/spectra-api/: requirements.txt  run.py
SpectraAI-Monorepo/spectra-api/src/: __init__.py  main.py
SpectraAI-Monorepo/spectra-core/src/: personality.py
SpectraAI-Monorepo/spectra-ui/: package.json  svelte.config.js  tailwind.config.js
SpectraAI-Monorepo/spectra-ui/src/: +layout.svelte  app.css  app.html
SpectraAI-Monorepo/spectra-ui/src/routes/: +page.svelte
apps/api/: pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/app/: __init__.py  main.py
apps/api/app/core/: ai_manager.py  config.py  logging.py
apps/api/app/routes/: __init__.py  auth.py  chat.py  health.py  memory.py
apps/api/tests/: conftest.py  test_api_setup.py
apps/web/: .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .prettierrc  .prettierrc.js  jest.config.js  jest.setup.js  next.config.js  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
apps/web/__tests__/: setup.test.tsx
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/ui/: button.tsx  toaster.tsx
backup_core/: ai_manager.py  brain.py  emotions.py  memory.py  reflection.py
config/: openai_config.py  settings.py
data/: memory_store.json
logic/: ai_manager.py  ai_providers.py
monorepo-structure/: ARCHITECTURE_PLAN.md  EXECUTIVE_SUMMARY.md  MIGRATION_GUIDE.md  migrate_to_monorepo.py  package-lock.json  quick_migrate.bat
tests/: __init__.py  conftest.py  test_emotions.py  test_memory.py  test_personality.py
